Bug 1585901 - Add missing margin to the "Group by" and "Label by" dropboxes in the memory inspector. r=julienw
Differential Revision: https://phabricator.services.mozilla.com/D48271

UltraBlame original commit: 7bd5a6c6242ddd15dcf573a2bae66fa6e22722fa

--- a/devtools/client/themes/memory.css
+++ b/devtools/client/themes/memory.css
@@ -803,60 +803,6 @@ devtools
 -
 toolbar
 >
-.
-toolbar
--
-group
->
-label
-.
-display
--
-by
->
-span
-{
-margin
--
-inline
--
-end
-:
-5px
-;
-}
-.
-devtools
--
-toolbar
->
-.
-toolbar
--
-group
->
-label
-.
-label
--
-by
->
-span
-{
-margin
--
-inline
--
-end
-:
-5px
-;
-}
-.
-devtools
--
-toolbar
->
 label
 {
 margin
@@ -878,10 +824,12 @@ items
 center
 ;
 }
-#
-select
+.
+devtools
 -
-view
+toolbar
+-
+select
 {
 margin
 -
